# meson_embedded

./: .gitignore  README.md  build.sh  env.sh  flash.sh  meson.build  meson_options.txt
config/: Dockerfile  Vagrantfile  cross_linux.txt  cross_windows.txt
config/platform/: .mxproject  platform.ioc
config/platform/Inc/: main.h
config/platform/Src/: stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c
docs/: Doxyfile.in  meson.build
src/: Makefile  meson.build
src/BSP/: meson.build
src/Inc/: FreeRTOSConfig.h
src/Src/: stm32h7xx_hal_msp.c
src/application/: main.c  meson.build  stm32h7xx_hal_conf.h  stm32h7xx_it.h
src/drivers/: meson.build
src/drivers/STM32H7xx_HAL_Driver/Src/: meson.build
src/middlewares/: meson.build
src/middlewares/FreeRTOS/Source/: meson.build
subprojects/: cpputest.wrap  doctest.wrap
test/: doctest_main.cpp  meson.build  test_main.cpp
test/CppUTest/: meson.build
