option('enable_tests',
  type : 'boolean',
  value : true,
  description : 'Enable testing'
)

option('enable_docs',
  type : 'boolean',
  value : true,
  description : 'Generate documentation with doxygen'
)

option('enable_graphs',
  type : 'boolean',
  value : true,
  description : 'Enable doxygen to generate graphs using dot'
)
