option('enable_test',
  type : 'boolean',
  value : true,
  description : 'Enable tests')

option('enable_docs',
  type : 'boolean',
  value : true,
  description : 'Generate documentation with doxygen')

option('enable_graphs',
  type : 'boolean',
  value : true,
  description : 'Enable doxygen to generate graphs using dot')
