drivers_src = files(
  'stm32h7xx_hal.c',
  'stm32h7xx_hal_cortex.c',
  'stm32h7xx_hal_dma.c',
  'stm32h7xx_hal_dma_ex.c',
  'stm32h7xx_hal_eth.c',
  'stm32h7xx_hal_eth_ex.c',
  'stm32h7xx_hal_exti.c',
  'stm32h7xx_hal_flash.c',
  'stm32h7xx_hal_flash_ex.c',
  'stm32h7xx_hal_gpio.c',
  'stm32h7xx_hal_hsem.c',
  'stm32h7xx_hal_i2c.c',
  'stm32h7xx_hal_i2c_ex.c',
  'stm32h7xx_hal_mdma.c',
  'stm32h7xx_hal_pcd.c',
  'stm32h7xx_hal_pcd_ex.c',
  'stm32h7xx_hal_pwr.c',
  'stm32h7xx_hal_pwr_ex.c',
  'stm32h7xx_hal_rcc.c',
  'stm32h7xx_hal_rcc_ex.c',
  'stm32h7xx_hal_tim.c',
  'stm32h7xx_hal_tim_ex.c',
  'stm32h7xx_hal_uart.c',
  'stm32h7xx_hal_uart_ex.c',
  'stm32h7xx_ll_usb.c',
)
